# MealPrepMate

./: .env  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  mealplanmate.afdesign  nodemon.json  package-lock.json  package.json  tsconfig.json
.devcontainer/app/: devcontainer.json
app/: Server.sln  docker-compose.yml
backend/: backend.generated.sln  docker-compose.dev.yml
configuration/: nginx.conf
nlp/: Dockerfile  README.md  experiment.py  main.py  nohup.out  pyproject.toml  requirements.txt  scrape_result.json
nlp/data/: SubstringPosition.py
nlp/dto/: IngredientResponse.py  RecipeResponse.py
nlp/logger/: logger.py
nlp/parser/: IngredientParser.py
nlp/services/: RecipeScraper.py
nlp/tests/: test_inflect.py  test_ingredient_parser.py  test_number_converter.py  test_sentence_denormalization.py
nlp/tests/test_cases/: composite_amounts.json  ingredient_parser_test_cases.json  mixed_fractions.json
prisma/: schema.prisma
recipe_nlp/: Dockerfile  IngredientParser.py  README.md  Response.py  annotations.py  main.py  parsetest.py  requirements-dev.txt  requirements.txt  sentence_annotator.py  test.py
redis/: dump.rdb
server/: .gitignore  CSharp_classes.md  CheckTestData.ts  DB_startup.md  Dockerfile.dev  EF_Core.md  Server.sln  codegen.ts  nutrients.csv  package-lock.json  package.json  test.js  test.ts  test.tsx  tsconfig.json
src/: index.ts
web/: .graphqlrc.yml  Dockerfile  README.md  codegen.ts  next.config.mjs  nutrients.txt  package-lock.json  package.json  ssrGraphqlClient.ts  tailwind.config.ts
(+1157 files in other folders)
